--- a/background.tex
+++ b/background.tex
@@ -654,7 +654,7 @@ Accented vowels indicate high tones, and other vowels are low.
 
 Using the letters $H$ and $L$ to indicate high and low tones, we can express the generalization as ``never have one or more L in-between two H''.
 This allows for strings such as \emph{HHL} and \emph{LLLHHHL}, but prohibits ones such as \emph{HHLLLHH}.
-Due to the long-distant nature of SP grammars, a $3$-local SP grammar can capture UTP by ruling out words that contain a subsequence $HLH$, see Figure \ref{imdlawnbadsp}.
+Due to the long-distant nature of SP grammars, a $3$-local SP grammar can capture UTP by ruling out words that contain a subsequence $HLH$, see Figure \ref{imdlawngoodsp}.
 
 \begin{figure}[h!]
 \begin{center}
@@ -680,7 +680,7 @@ Due to the long-distant nature of SP grammars, a $3$-local SP grammar can captur
 \end{tikzpicture}
 \end{center}
 \caption{SP grammar captures the UTP pattern.}
-\label{imdlawnbadsp}
+\label{imdlawngoodsp}
 \end{figure}
 
 {
