--- a/titlepage.tex
+++ b/titlepage.tex
@@ -35,27 +35,27 @@ Stony Brook University \\
 
 
 %
-%
-%\newpage
-%
-%
-%
-%\begin{center}
-%\textbf{Stony Brook University} \\ \vspace{2em}
-%The Graduate School \\ \vspace{2.3em}
-%\textbf{Al\"ena Aks\"enova} \\ \vspace{2.3em}
-%We, the dissertation committee or the above candidate for the \\
-%Doctor of Philosophy degree, hereby recommend \\
-%acceptance of this dissertation \\ \vspace{2.3em}
-%\textbf{Thomas Graf -- Dissertation Advisor} \\
-%\textbf{Professor, Department of Linguistics}  \\ \vspace{2.3em}
-%\textbf{Jeffrey Heinz -- Chairperson of Defense} \\
-%\textbf{Professor, Department of Linguistics}  \\ \vspace{2.3em}
-%\textbf{Mark Aronoff} \\
-%\textbf{Professor, Department of Linguistics}  \\ \vspace{2.3em}
-%\textbf{Richard William Sproat} \\
-%\textbf{Senior Staff Research Scientist, Google}  \\ \vspace{2.3em}
-%This dissertation is accepted by the Graduate School \\ \vspace{2.3em}
-%Eric Wertheimer \\
-%Dean of the Graduate School
-%\end{center}
+
+\newpage
+
+
+
+\begin{center}
+\textbf{Stony Brook University} \\ \vspace{2em}
+The Graduate School \\ \vspace{2.3em}
+\textbf{Al\"ena Aks\"enova} \\ \vspace{2.3em}
+We, the dissertation committee or the above candidate for the \\
+Doctor of Philosophy degree, hereby recommend \\
+acceptance of this dissertation \\ \vspace{2.3em}
+\textbf{Thomas Graf -- Dissertation Advisor} \\
+\textbf{Professor, Department of Linguistics}  \\ \vspace{2.3em}
+\textbf{Mark Aronoff -- Chairperson of Defense} \\
+\textbf{Professor, Department of Linguistics}  \\ \vspace{2.3em}
+\textbf{Jeffrey Heinz} \\
+\textbf{Professor, Department of Linguistics}  \\ \vspace{2.3em}
+\textbf{Richard William Sproat} \\
+\textbf{Senior Staff Research Scientist, Google}  \\ \vspace{2.3em}
+This dissertation is accepted by the Graduate School \\ \vspace{2.3em}
+Eric Wertheimer \\
+Dean of the Graduate School
+\end{center}
