fixed bibliography; NOT THE FINAL VERSION

--- a/aksbib.bib
+++ b/aksbib.bib
@@ -35,7 +35,8 @@
   pages = 	{64--73},
   publisher = {Association for Computational Linguistics},
   doi = {10.7275/R5K64G8S},
-  url = 	{http://aclweb.org/anthology/W18-0307}
+  url = 	{http://aclweb.org/anthology/W18-0307},
+  address = {Salt Lake City, UT}
 }
 
 @misc{Aksenova2017,
@@ -52,7 +53,8 @@
   booktitle = {Proceedings of the 14th SIGMORPHON Workshop on Computational Research in Phonetics, Phonology, and Morphology},
   pages = {121--130},
   publisher = {Association for Computational Linguistics},
-  doi = {10.18653/v1/W16-2019}
+  doi = {10.18653/v1/W16-2019},
+  address = {Berlin, Germany}
 }
 
 @INPROCEEDINGS{AlquezarSanfeliu1994,
@@ -119,15 +121,18 @@
   booktitle = {Proceedings of the Conference on Logic and Machine Learning in Natural Language},
   year = {2017},
   editor = {Simon Dobnik and Stergios Chatzikyriakidis and Shalom Lappin},
-  optaddress = {University of Gothenburg, Sweden},
+  address = {University of Gothenburg, Sweden},
   url = {https://arxiv.org/pdf/1705.05940.pdf}
 }
 
-@InProceedings{Avcu2017Experiment,
+@InProceedings{Avcu2018,
   author    = {Avcu, Enes},
-  title     = {Experimental investigation of the subregular hierarchy},
-  year      = {2017},
-  booktitle = {Proceedings of the 35st West Coast Conference on Formal Linguistics at Calgary, Alberta Canada}
+  title     = {Experimental investigation of the subregular hypothesis},
+  year      = {2018},
+  booktitle = {Proceedings of the 35st West Coast Conference on Formal Linguistics},
+  pages = {77-86},
+  editor = {William Bennett at al.},
+  address = {Somerville, MA}
   }
 
 @article{BangaloreRiccardi2002,
@@ -205,10 +210,11 @@
 }
 
 @inproceedings{Bruguier2017PronunciationLW,
-  title={Pronunciation Learning with RNN-Transducers},
+  title={Pronunciation Learning with {RNN}-Transducers},
   author={Antoine Bruguier and Danushen Gnanapragasam and Leif Johnson and Kanishka Rao and Francoise Beaufays},
-  booktitle={INTERSPEECH},
-  year={2017}
+  booktitle={Proceedings of INTERSPEECH 2017},
+  year={2017},
+  address = {Stockholm, Sweden}
 }
 
 @inproceedings{BurnessMcMullin2019,
@@ -217,7 +223,8 @@
   booktitle={Proceedings of the 16th Meeting on the Mathematics of Language},
   year = {2019},
   publisher = {Association for Computational Linguistics},
-  pages = {78--90}
+  pages = {78--90},
+  address={Toronto, Canada}
 }
 
 
@@ -258,6 +265,7 @@
   editor = {Jeffrey Heinz and Colin de la Higuera and Tim Oates},
   volume = {21},
   pages = {69--83},
+  address = {Washington, D.C.},
   pub-url = {http://jmlr.csail.mit.edu/proceedings/papers/v21/},
   pdf-url = {http://jeffreyheinz.net/papers/Chandlee-FuEtAl-2012-IGIRP.pdf}
 }
@@ -388,7 +396,7 @@
 
 @article{Church1936,
   author = {Alonzo Church},
-  title = {A Note on the Entscheidungsproblem},
+  title = {A Note on the {E}ntscheidungsproblem},
   year = {1936},
   journal = {Journal of Symbolic Logic},
   volume = {1},
@@ -463,8 +471,7 @@ ISSN={1664-1078}
     title={Structure Sensitive Tier Projection: Applications and Formal Properties},
     booktitle={Formal Grammar},
     year={2019},
-    publisher={Springer},
-    address={Berlin, Heidelberg},
+    address={Riga, Latvia},
     pages={35--50},
     doi={10.1007/978-3-662-59648-7_3}
 }
@@ -489,7 +496,7 @@ ISSN={1664-1078}
   title = {Modeling reduplication with 2-way finite-state transducers},
   booktitle = {Proceedings of the 15th SIGMORPHON Workshop on Computational Research in Phonetics, Phonology, and Morphology},
   year = {2018},
-  url = {},
+  address = {Brussels, Belgium},
   pages = {66-77}
 }
 
@@ -586,7 +593,8 @@ publisher = {Academic Press, Inc.}
   booktitle = {The Proceedings of the 29th West Coast Conference on Formal Linguistics},
   year = {2012},
   url = {http://www.lingref.com/cpp/wccfl/29/paper2688.pdf},
-  pages = {63--71}
+  pages = {63--71},
+  address = {University of California, Berkeley}
 }
 
 @book{GalvezRubino98,
@@ -688,6 +696,7 @@ publisher = {Academic Press, Inc.}
               O'Connor, Brendan and
               Pater, Joe},
     pages = {205--215},
+    address = {New York, NY}
 }
 
 @inproceedings{Graf18NELS,
@@ -696,7 +705,7 @@ publisher = {Academic Press, Inc.}
     year = {2018},
     booktitle = {Proceedings of {NELS} 2017},
     url = {http://ling.auf.net/lingbuzz/004080},
-    note = {To appear},
+    address = {University of Iceland, Reykjavik, Iceland}
 }
 
 @inproceedings{GrafEtAl16FG,
@@ -733,6 +742,7 @@ isbn="978-3-662-53042-9",
     booktitle = {Proceedings of the 22nd {A}msterdam {C}olloquium},
     editor = {Schl\"{o}der, Julian J. and McHugh, Dean and Roelofsen, Floris},
     pages = {455--464},
+    address={Amsterdam, Netherlands}
 }
 
 @article{Graf17Phonology,
@@ -744,7 +754,6 @@ isbn="978-3-662-53042-9",
   pages = {1--21},
   doi = {10.1017/S0952675717000197}
 }
-%  url = {https://dx.doi.org/10.1017/S0952675717000197},
 
 @inproceedings{Graf18CLS,
     author = {Graf, Thomas},
@@ -760,6 +769,7 @@ isbn="978-3-662-53042-9",
               Sankhagowit, Amara and
               Tabatowski, Miachel},
     pages = {117--136},
+    address={Chicago, IL}
 }
 
 @Misc{Graf17CLSpres,
@@ -767,7 +777,8 @@ isbn="978-3-662-53042-9",
     title = {It's a (Sub-)Regular Conspiracy: Locality and Computation in Phonology, Morphology, Syntax, and Semantics},
     year = {2017},
     note = {Slides of the CLS invited talk, May 26},
-    url = {http://thomasgraf.net/doc/talks/Graf17CLStalk.pdf}
+    url = {http://thomasgraf.net/doc/talks/Graf17CLStalk.pdf},
+    address={Chicago, IL}
 }
 
 @misc{GrafHeinzMs,
@@ -794,7 +805,7 @@ isbn="978-3-662-53042-9",
 
 @inproceedings{Hansson2010ber,
   author = {Gunnar Olafur Hansson},
-  title = {Long-distance voicing assimilation in Berber: spreading and/or agreement?},
+  title = {Long-distance voicing assimilation in {B}erber: spreading and/or agreement?},
   booktitle = {Proceedings of the 2010 annual conference of the Canadian Linguistic Association},
   year = {2010},
   publisher = {Canadian Linguistic Association},
@@ -826,7 +837,7 @@ isbn="978-3-662-53042-9",
   author = {K. David Harrison and Emily Thomforde and Michael O'Keefen},
   title = {The Vowel Harmony Calculator},
   year = {2004},
-  school = {Website. Swarthmore College.}
+  note = {Website. Swarthmore College.}
 }
 
 
@@ -907,7 +918,7 @@ isbn="978-3-662-53042-9",
 		  for Computational Linguistics},
   year = {2011},
   publisher = {Association for Computational Linguistics},
-  address = {Portland, USA},
+  address = {Portland, OR},
   pages = {58--64},
   url = {http://www.aclweb.org/anthology/P/P11/P11-2011.pdf}
 }
@@ -1036,7 +1047,7 @@ using Finite-State Transducers},
 @article{HulstSmith87,
   author={Harry van der Hulst and Noval Smith},
   year={1987},
-  title={Vowel harmony in Khalkha and Buriat (East Mongolian)},
+  title={Vowel harmony in {K}halkha and {B}uriat ({E}ast {M}ongolian)},
   journal = {Linguistics in the Netherlands},
   pages ={81-89}
 }
@@ -1055,7 +1066,7 @@ using Finite-State Transducers},
 
 @article{Hyman98,
   author = {Larry Hyman},
-  title = {Positional prominence and the `prosodic trough' in Yaka},
+  title = {Positional prominence and the `prosodic trough' in {Y}aka},
   year = {1998},
   journal = {Phonology},
   volume = {15},
@@ -1064,7 +1075,7 @@ using Finite-State Transducers},
 }
 
 @incollection{HymanKatamba2010,
-  title = {Tone, syntax, and prosodic domains in Luganda},
+  title = {Tone, syntax, and prosodic domains in {L}uganda},
   author = {Larry Hyman and Francis Katamba},
   booktitle = {ZAS Papers in Linguistics 53},
   editor = {Laura J. Downing},
@@ -1088,7 +1099,7 @@ using Finite-State Transducers},
 @article{JagerRogers12,
   author = {Gerhard J\"{a}ger and James Rogers},
   year = {2012},
-  title = {Formal Language Theory: Refining the Chomsky Hierarchy},
+  title = {Formal Language Theory: Refining the {C}homsky Hierarchy},
   journal = {Philosophical Transactions of the Royal Society B: Biological Sciences},
   volume = {367},
   number = {1598},
@@ -1107,13 +1118,13 @@ using Finite-State Transducers},
   pages = {247-283}
 }
 
-@article{JardineEtAl2014,
+@inproceedings{JardineEtAl2014,
   author = {Adam Jardine and Jane Chandlee and R\'emi Eyraud and Jeffrey Heinz},
   title = {Very efficient learning of structured classes of subsequential functions from positive data},
   year = {2014},
-  journal = {JMLR: Workshop and Conference Proceedings},
+  booktitle = {Proceedings of the 12th International Conference on Grammatical Inference, PMLR},
   volume = {34},
-  number = {},
+  address = {Washington, D.C.},
   pages = {94-108}
 }
 
@@ -1173,7 +1184,8 @@ using Finite-State Transducers},
   author={Bevan K. Jones and Mark Johnson and Sharon Goldwater},
   booktitle={Proceedings of Australasian Language Technology Association Workshop},
   year={2011},
-  pages = {19-28}
+  pages = {19-28},
+  address={Canberra, Australia}
 }
 
 @book{Jurafsky2013,
@@ -1197,7 +1209,9 @@ using Finite-State Transducers},
 @inproceedings{Kaplan1981PhonologicalRA,
   title={Phonological rules and finite--state transducers},
   author={Ronald M. Kaplan and Martin Kay},
-  year={1981}
+  year={1981},
+  booktitle = {Annual Meeting of the Linguistics Society of America},
+  address = {New York, NY}
 }
 
 @article{KaplanKay94,
@@ -1212,7 +1226,7 @@ using Finite-State Transducers},
 
 @inproceedings{Karakas2020,
   author = {Ayla Karaka\c{s}},
-  title = {An IBSP Description of Sanskrit /n/-Retroflexion},
+  title = {An {IBSP} Description of {S}anskrit /n/-Retroflexion},
   booktitle = {Proceedings of the Society for Computation in Linguistics},
   year = {2020},
   volume = {3},
@@ -1506,13 +1520,13 @@ using Finite-State Transducers},
   pages = {39-64}
 }
 
-@article{McMullinAksenovaDeSanto2019,
+@inproceedings{McMullinAksenovaDeSanto2019,
   author = {McMullin, Kevin and Aks\"{e}nova, Al\"{e}na and De Santo, Aniello},
   title = {Learning phonotactic restrictions on multiple tiers},
-  journal = {Proceedings of the Society for Computation in Linguistics},
+  booktitle = {Proceedings of the Society for Computation in Linguistics},
   year = {2019},
   volume = {2},
-  number = {},
+  address = {New York, NY},
   pages = {377-378}
 }
 
@@ -1617,7 +1631,7 @@ using Finite-State Transducers},
 }
 
 
-@incollection{OncinaVaro1996,
+@inproceedings{OncinaVaro1996,
   author = {Jos\'e Oncina and Miguel A. Var\'o},
   title = {Using domain information during the learning of a subsequential transducer},
   editor = {},
@@ -1691,7 +1705,7 @@ publisher = {Plenum Publishing Co.},
 
 @article{Pochtrager2010,
   author = {Markus P\"{o}chtrager},
-  title = {Does Turkish diss harmony?},
+  title = {Does {T}urkish diss harmony?},
   journal = {Acta Linguistica Hungarica},
   year = {2010},
   volume = {57},
@@ -1731,15 +1745,16 @@ publisher = {Plenum Publishing Co.},
 
 @inproceedings{Ribeiro2002,
   author = {Eduardo Rivail Ribeiro},
-  title = {Directionality in Vowel Harmony: The Case of Karaja (Macro-Je)},
+  title = {Directionality in Vowel Harmony: The Case of {K}araja ({M}acro-{J}e)},
   booktitle = {Proceedings of BLS 28},
   year = {2002},
-  pages = {475-485}
+  pages = {475-485},
+  address = {Berkeley, CA}
 }
 
 @book{RoarkSproat2007,
  author = {Brian Roark and Richard Sproat},
- title = {Computational approaches to syntax and morphpology},
+ title = {Computational approaches to syntax and morphology},
  year = {2007},
  publisher = {Oxford University Press},
  address = {Oxford},
@@ -1783,7 +1798,8 @@ volume	= {45(2)}
   title = {On the Cognitive Complexity of Phonotactic Constraints},
   year = {2018},
   url = {https://cs.earlham.edu/~jrogers/slides/stonybrook.ho.pdf},
-  note = {Slides of a Stony Brook Colloquium. March 23.}
+  note = {Slides from a Stony Brook Colloquium. March 23.},
+  address = {Stony Brook, NY}
 }
 
 @InProceedings{Rogers-HeinzEtAl-2010-LPTSS,
@@ -1798,14 +1814,15 @@ volume	= {45(2)}
   pages         = {255-265}
 }
 
-@inbook{RogersEtAl13,
+@InProceedings{RogersEtAl13,
   author = {James Rogers and Jeffrey Heinz and Margaret Fero and Jeremy Hurst and Dakotah Lambert
   	and Sean Wibel},
   year = {2013},
   title = {Cognitive and Sub-regular Complexity},
-  chapter = {Formal Grammar},
+  booktitle = {Proceedings of Formal Grammar},
   pages = {90-108},
-  publisher = {Springer}
+  publisher = {Springer Berlin/Heidelberg},
+  address = {D\"usseldorf, Germany}
 }
 
 @Article{RogersPullum2011,
@@ -2107,7 +2124,7 @@ url={http://dx.doi.org/10.1007/3-540-07407-4_23}
 
 @inproceedings{VuEtAl19SCiL,
     author = {Vu, Mai Ha and Shafiei, Nazila and Graf, Thomas},
-    title = {Case Assignment in {TSL} Syntax: A Case Study},
+    title = {Case Assignment in {TSL} Syntax: a Case Study},
     year = {2019},
     booktitle = {Proceedings of the {S}ociety for {C}omputation in {L}inguistics ({SCiL}) 2019},
     editor = {Jarosz, Gaja and
@@ -2115,6 +2132,7 @@ url={http://dx.doi.org/10.1007/3-540-07407-4_23}
               O'Connor, Brendan and
               Pater, Joe},
     pages = {267--276},
+    address = {New York, NY},
     doi = {10.7275/sywz-xw23}
 }
 
@@ -2137,7 +2155,8 @@ url={http://dx.doi.org/10.1007/3-540-07407-4_23}
     title = {Yaka nasal harmony: Spreading or segmental correspondence?},
     year = {2000},
     booktitle = {Proceedings of the Annual Meeting of the Berkeley Linguistics Society 26},
-    pages = {321--332}
+    pages = {321--332},
+    address = {Berkeley, CA}
 }
 
 
@@ -2155,16 +2174,17 @@ month = {04},
 pages = {287-292},
 title = {Explaining `explaining away'},
 volume = {15},
-journal = {Pattern Analysis and Machine Intelligence, IEEE Transactions on},
+journal = {Pattern Analysis and Machine Intelligence, IEEE Transactions},
 doi = {10.1109/34.204911}
 }
 
 
 @book{Wiebke1995,
   title={Final Devoicing in the Phonology of German},
-  author={Brockhaus, Wiebke},
+  author={Wiebke Brockhaus},
   year={1995},
-  publisher={Max Niemeyer}
+  publisher={Max Niemeyer},
+  address = {T\"ubingen, Germany}
 }
 
 @book{Yan1998,
@@ -2201,7 +2221,7 @@ doi = {10.1109/34.204911}
 
 @misc{sigmapie,
 	author = {Al\"ena Aks\"enova},
-	title = {SigmaPie},
+	title = {{S}igma{P}ie},
 	year = {2020},
 	note = "SigmaPie for subregular and subsequential grammar induction. Python package available on PyPI.",
 	howpublished = "\url{https://pypi.org/project/SigmaPie/}"
@@ -2210,7 +2230,7 @@ doi = {10.1109/34.204911}
 
 @misc{GHsigmapie,
 	author = {Al\"ena Aks\"enova},
-	title = {SigmaPie for subregular and subsequential grammar induction},
+	title = {{S}igma{P}ie for subregular and subsequential grammar induction},
 	howpublished = "\url{https://github.com/alenaks/SigmaPie}",
 	year = {2020},
 	note = "[Online; accessed 22-March-2020]"
@@ -2219,7 +2239,7 @@ doi = {10.1109/34.204911}
 
 @misc{GHostia,
 	author = {Al\"ena Aks\"enova},
-	title = {OSTIA algorithm: implementation and tests},
+	title = {{OSTIA} algorithm: implementation and tests},
 	howpublished = "\url{https://github.com/alenaks/OSTIA/blob/master/ostia.ipynb}",
 	year = {2019},
 	note = "[Online; accessed 22-March-2020]"
@@ -2244,7 +2264,7 @@ doi = {10.1109/34.204911}
 
 @misc{GHbrutefst,
 	author = {Al\"ena Aks\"enova},
-	title = {Brute force extraction of k-local ISL transducers},
+	title = {Brute force extraction of k-local {ISL} transducers},
 	howpublished = "\url{https://github.com/alenaks/subregular-experiments/blob/master/ISL_group_learner.ipynb}",
 	year = {2020},
 	note = "[Online; accessed 22-March-2020]"
@@ -2260,7 +2280,7 @@ doi = {10.1109/34.204911}
 
 @misc{GHdouglasbuzatto,
 	author = {Douglas Buzatto},
-	title = {WordLists},
+	title = {{W}ord{L}ists},
 	howpublished = "\url{https://github.com/douglasbuzatto/WordLists}",
 	year = {2016},
 	note = "[Online; accessed 28-March-2020]"
