--- a/background.tex
+++ b/background.tex
@@ -530,7 +530,7 @@ SP grammars encode restrictions on the order of elements, and thus cannot differ
 \paragraph{Tuareg sibilant harmony}
 Coming back to the pattern of Tuareg sibilant harmony exemplified before in (7-11), it can be modeled with an SP grammar by prohibiting subsequences of disagreeing sibilants.
 The bigrams $sz$ and \textesh\textyogh~ are prohibited because their elements disagree in voicing, \textesh$s$ and $z$\textyogh~ disagree in anteriority, etc.
-In total, this grammar contains $12$ restrictions $R$ that are listed in Grammar \ref{slwfdocass}.
+In total, this grammar contains $12$ restrictions $R$ that are listed in Grammar \ref{tuaregsibilanthupd}.
 
 {
 \renewcommand{\tablename}{Grammar}
@@ -543,7 +543,7 @@ In total, this grammar contains $12$ restrictions $R$ that are listed in Grammar
 \textit{$k$ =}      & $2$          
 \end{tabular}
 \caption{$2$-SP grammar for Tuareg sibilant harmony in voicing and anteriority.}
-\label{slwfdocass}
+\label{tuaregsibilanthupd}
 \end{center}
 \end{table}
 }
@@ -694,7 +694,7 @@ Due to the long-distant nature of SP grammars, a $3$-local SP grammar can captur
 \textit{$k$ =}      & $3$          
 \end{tabular}
 \caption{$3$-SP grammar for Luganda unbounded tone plateauing.}
-\label{slwfdocass}
+\label{utpsuccessfulsp}
 \end{center}
 \end{table}
 }
@@ -1408,7 +1408,7 @@ In such a way, these subregular grammars can capture most of the dependencies im
 Some known natural language patterns, however, require powers of different subregular language classes.
 Among them, there is a pattern of Sanskrit /n/-retroflexion and Yaka harmony triggered by local conditions \citep{Walker2000,McMullin2016,Karakas2020}.
 IO-TSL and IBSP subregular language classes can models those cases \citep{Graf17Phonology,Graf18NELS}.
-Interestingly, none of the subregular language classes mentioned above can express such theoretically possible but unattested patterns as first-last harmony, where the first vowel of the word needs to harmonize with the last one \citep{Lai15,Avcu2017Experiment}.
+Interestingly, none of the subregular language classes mentioned above can express such theoretically possible but unattested patterns as first-last harmony, where the first vowel of the word needs to harmonize with the last one \citep{Lai15,Avcu2018}.
 
 
 Later, in chapter 3 of this dissertation, I discuss several subregular patterns and show how the corresponding grammars can be learned from the real data.
@@ -1629,7 +1629,7 @@ However, some processes, such as reduplication, are not subregular \citep{Dolati
 The limitations imposed by subregular models provide insights into typology and cognition.
 They allow to detect and explain typological gaps, such as the absence of first-last and sour grapes harmonic patterns%
 \footnote{The first-last vowel harmony enforces the agreement of the first and the last vowels within a word, and the sour grapes harmony spreads a harmonizing feature only if a blocker is not present \citep{Heinz-Lai-2013-VHS}.}
- \citep{Heinz-Lai-2013-VHS,Luo2017}, and give insights into human cognitive system \citep{RogersPullum2011,Lai15,Avcu2017Experiment}.
+ \citep{Heinz-Lai-2013-VHS,Luo2017}, and give insights into human cognitive system \citep{RogersPullum2011,Lai15,Avcu2018}.
 
 
 Although subsequential mappings fit a large portion of natural language patterns, there are phonological processes that are not subsequential.
